scrollbar moz fix

--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,7 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
+  scrollbar-width: none;
 }
 html,
 body {
